tests/baselines/reference/tsxElementResolution7.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
file.tsx(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
file.tsx(12,5): error TS2339: Property 'other' does not exist on type 'typeof my'.
file.tsx(14,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
file.tsx(19,11): error TS2339: Property 'non' does not exist on type 'typeof my'.


==== file.tsx (5 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements { }
    }
    
    module my {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var div: any;
    }
    // OK
    <my.div n='x' />;
    // Error
    <my.other />;
        ~~~~~
!!! error TS2339: Property 'other' does not exist on type 'typeof my'.
    
    module q {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import mine = my;
        // OK
        <mine.div n='x' />;
        // Error
        <mine.non />;
              ~~~
!!! error TS2339: Property 'non' does not exist on type 'typeof my'.
    }
    